nzbget/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nzbget
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      containers:
      - name: nzbget
        image: linuxserver/nzbget
        imagePullPolicy: Always
        ports:
        - containerPort: 6789
        volumeMounts:
        - name: nzbget
          mountPath: /config
          subPath: docker/nzbget
        - name: nzbget
          mountPath: /downloads
          subPath: downloads
      volumes:
      - name: nzbget
        glusterfs:
          endpoints: glusterfs-cluster
          path: data
          readOnly: false
