nzbget/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  labels:
    app: nzbget
spec:
  ports:
  - name: http
    port: 6789
  selector:
    app: nzbget
